<resources>
    <string name="app_name">Bestread</string>
    <string name="verified">Verified</string>
    <string name="doit">Do</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="task_detail">Library Detail</string>
    <string name="task_book_detail">Book Detail</string>
    <string name="modify">Modify</string>
    <string name="are_you_sure_message">¿Are you sure?</string>
    <string name="remove_library_message">Delete Library</string>
    <string name="remove_book_message">Delete Book</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_message">Save</string>
    <string name="return_message">Return</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="owner">Publisher</string>
    <string name="select_location_message">Select a location in the map</string>
    <string name="task_registered_message">Library registered</string>
    <string name="task_registered_error">An error has occurred. Check that data is valid</string>
    <string name="remember_message">Remember not to use the app while driving.</string>
    <string name="navigate">Navigate(In construction)</string>
    <string name="view_map">View Map</string>
    <string name="view_libraries">View Libraries</string>
    <string name="AddItem">Add Library</string>
    <string name="viewMapBar">View Map</string>
    <string name="view_settings_bar">View Settings</string>
    <string name="task_modified_message">Library modified</string>
    <string name="open_camera">Open Camera</string>
    <string name="take_picture">Take Picture</string>
    <string name="save_image">Save Image</string>
    <string name="library_modified_message">Library modified</string>
    <string name="register_library">Register Library</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="username">User Name</string>
    <string name="loginForgotten">Forgotten Password?</string>
    <string name="loginButton">Login</string>
    <string name="loginRegister">Register</string>
    <string name="loginPassword">Password</string>
    <string name="registerName">Name</string>
    <string name="registerLastName">Last Name</string>
    <string name="registerUsername">Username</string>
    <string name="registerPassword">Password</string>
    <string name="registerPhoneNumber">Phone number</string>
    <string name="registerEmail">Email</string>
    <string name="registerAdmin">Admin</string>
    <string name="registerRegistrar">Register</string>
    <string name="registerBack">Back</string>
    <string name="correctRegister">Registered Successfully</string>
    <string name="errorRegister">Error Registering</string>
    <string name="task_registered_user">User registered</string>
    <string name="loginCorrect">Login Successfully</string>
    <string name="loginIncorrect">Login failed</string>
    <string name="remove_user_message">User deleted</string>
    <string name="title_name_mssg">Name</string>
    <string name="title_email_msg">Email</string>
    <string name="modify_my_profile_button_msg">Modify my profile</string>
    <string name="delete_acount_button_mssg">Delete Account</string>
    <string name="modify_button_title">Modify</string>
    <string name="return_button_title">Return</string>
    <string name="title_username_mssg">Username</string>
    <string name="title_password_mssg">Password</string>
    <string name="title_email_mssg">Email</string>
    <string name="update_user">User updated successfully</string>
    <string name="title_lastname_mssg">Last Name</string>
    <string name="title_Id">Id</string>
    <string name="title_phone_mssg">Phone</string>
    <string name="my_profile_mssg">My profile</string>
    <string name="book_modified_message">Book modified</string>
    <string name="task_book_registered_message">Book Registered</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="register_book">Register book</string>
    <string name="view_books">View Books</string>
    <string name="city">City</string>
    <string name="code">Code</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="pages">Pages</string>
    <string name="price">Price</string>
    <string name="hasStock">Has Stock</string>
    <string name="favorites">Add to favorites</string>
    <string name="view_favorites">View favorites</string>
    <string name="no_favorites">No favorites</string>






</resources>