<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:theme="@style/Theme.BestRead"
    tools:context=".view.ModifyUserActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_modifyUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="#3F51B5"
            android:onClick="modifyUser"
            android:text="@string/modify_button_title"
            android:textColor="#FFFFFF" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="#666666"
            android:onClick="goBack"
            android:text="@string/return_button_title"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-178dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_modifyUserTitleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_name_mssg"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_modifyUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#555555" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_modifyUserTitleLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_lastname_mssg"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_modifyUserLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#555555" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_modifyUserTitleUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_username_mssg"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_modifyUserUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#555555" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_modifyUserTitlePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_password_mssg"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_modifyUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#555555" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_modifyUserTitlePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_phone_mssg"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_modifyUserPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="#555555" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_modifyUserTitleEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_email_mssg"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_modifyUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="#555555" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>