<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ViewProfileActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/im_profile"
            android:layout_width="wrap_content"
            android:layout_height="108dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="1pt"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/bt_camara"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:background="@android:drawable/ic_menu_camera"
            android:backgroundTint="#000000"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tv_profileTitleUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/title_username_mssg"
            android:textAlignment="center"
            android:textColor="#595959"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_profileUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:textColor="#595959"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_profileTitleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/title_name_mssg"
            android:textAlignment="center"
            android:textColor="#595959"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:textColor="#595959"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_profileTitleLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/title_lastname_mssg"
            android:textAlignment="center"
            android:textColor="#595959"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_profileLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:textColor="#595959"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/tv_profileTitleEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_email_msg"
            android:textAlignment="center"
            android:textColor="#595959"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_profileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:textColor="#595959"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3F51B5"
                android:onClick="modifyUser"
                android:text="@string/modify_my_profile_button_msg"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#F44336"
                android:onClick="deleteUser"
                android:text="@string/delete_acount_button_mssg"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>